Add initial height for better layout of demo when loading.

--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,8 @@
 		.cropperContainer {
 			float: left;
 			border: 0px solid #eee;
-			min-width: 440px;
+			min-width: 440px;/*Used to improve layout during loading the image.*/
+			min-height: 327px;
 		}
 		.previews {
 			float: left;
